# pokedit

./: .gitignore  Cargo.toml
pokedit/: Cargo.toml
pokedit-lib/: Cargo.toml
pokedit-lib/src/: common.rs  error.rs  lib.rs  mem.rs
pokedit-lib/src/gen3/: mod.rs
pokedit/src/: app.rs  input.rs  lib.rs  main.rs
