[package]
name = "pokedit"
version = "0.1.0"
edition = "2021"
default-run = "simulator"

[[bin]]
name = "cli"

[[bin]]
name = "simulator"
required-features = ["async", "gui", "simulator"]

[dependencies]
anyhow = "1.0.83"
simple_logger = "5.0.0"
pokedit-lib = { path = "../pokedit-lib" }
tokio = { version = "1.37.0", optional = true, features = ["time", "macros", "rt"] }
embedded-graphics = { version = "0.8.1", optional = true }
sdl2 = { version = "0.35.2", optional = true }
embedded-graphics-simulator = { version = "0.6.0", optional = true }
log = "0.4.21"

[features]
default = []
async = ["dep:tokio"]
gui = ["dep:embedded-graphics", "dep:sdl2"]
simulator = ["dep:embedded-graphics-simulator"]
